# tarfa

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  EXACTNESS.md  LICENSE  README.md  pyproject.toml
docs/: PHASE_LOG.md  STORY.md
format/: JNF_V1.md  capture_hotlist.py  convert_four_layers.py  convert_jnf.py  runtime_manifest.py
research/layout_research/: .gitignore  README.md  bf16_entropy_study.py  layout_probe.py  read_pattern_results.json  rq4_convert.py  rq4_replay.py  rq4_replay2.py  rq4_replay3.py
research/layout_research/rq4/: entropy_report.json  replay2_results.json  replay3_results.json  replay_results.json
tarfa/: cli.py
tarfa/engine/: channel.py  channel_q4.py  chat.html  chat.py  dreamer.py  exact_bf16.py  fused_int4.py  layered.py  moe_kernel.py  quality.py  run.py  serve.py
validation/: bench_exact_bf16.json  bench_fast_int4.json  bench_repo.py  phase1_validate.py  phase2_validate.py  phase3_validate.py  phase4_validate.py  phase5_validate.py  phase6_validate.py  phase7_validate.py  power_metrics.json
validation/phase12/: completion_replay.py  completion_results.json  service_p12_completion.json  service_p12_completion2.json  service_p12_serial.json  service_p12_serial2.json
